feat: statements and print